Changed server to fit new contract
